# migration_checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
evaluation/scripts/: evaluate.py
fixtures/argparse/: complex_click.py  invalid_click.py  invalid_click_parse_args.py  invalid_configargparse.py  invalid_docopt.py  sample_click.py  sample_configargparse.py  sample_docopt.py
fixtures/flask/: complex_quart.py  invalid_bottle.py  invalid_fastapi.py  invalid_quart.py  invalid_quart_request_json.py  invalid_quart_template.py  sample_bottle.py  sample_fastapi.py  sample_quart.py
fixtures/matplotlib/: complex_plotly.py  invalid_bokeh.py  invalid_plotly.py  invalid_seaborn.py  sample_bokeh.py  sample_matplotlib.py  sample_plotly.py  sample_seaborn.py  sample_seaborn_clean.py
fixtures/pandas/: complex_polars.py  invalid_api_calls.py  invalid_dask.py  invalid_polars.py  invalid_tablib.py  mixed_migration.py  sample_dask.py  sample_migration.py  sample_polars.py  sample_tablib.py  suspicious_downstream_use.py
fixtures/requests/: complex_aiohttp.py  invalid_aiohttp.py  invalid_aiohttp_missing_await.py  invalid_aiohttp_status.py  invalid_httpx.py  invalid_urllib3.py  sample_aiohttp.py  sample_httpx.py  sample_requests.py  sample_urllib3.py
rules/data_processing/: pandas_to_dask.yml  pandas_to_polars.yml  pandas_to_tablib.yml
rules/http_clients/: requests_to_aiohttp.yml  requests_to_httpx.yml  requests_to_urllib3.yml
rules/plotting/: matplotlib_to_bokeh.yml  (+2 more)
tests/: test_analysis.py  test_collector.py  test_evaluate.py  test_main.py  test_rules.py
(+16 files in other folders)
